@startuml
skinparam packageStyle rectangle

package ui {
    class ConvertView
    class HistoricalTrendView
}

package interface_adapter {
    class FavouriteCurrencyController
    class FavouriteCurrencyPresenter
    class FavouriteCurrencyViewModel
}

package "use_case.favourite_currency" {
    interface FavouriteCurrencyInputBoundary
    interface FavouriteCurrencyOutputBoundary
    interface FavouriteCurrencyDataAccessInterface

    class FavouriteCurrencyInteractor
    class FavouriteCurrencyInputData
    class FavouriteCurrencyOutputData
}

package data_access {
    class FavouriteCurrencyFileDataAccessObject
}

' ---- UI -> Adapter ----
ConvertView --> FavouriteCurrencyController
ConvertView --> FavouriteCurrencyViewModel
HistoricalTrendView --> FavouriteCurrencyController
HistoricalTrendView --> FavouriteCurrencyViewModel

' ---- Controller -> Use Case ----
FavouriteCurrencyController --> FavouriteCurrencyInputBoundary

' ---- Interactor ----
FavouriteCurrencyInteractor ..|> FavouriteCurrencyInputBoundary
FavouriteCurrencyInteractor --> FavouriteCurrencyDataAccessInterface
FavouriteCurrencyInteractor --> FavouriteCurrencyOutputBoundary
FavouriteCurrencyInteractor --> FavouriteCurrencyInputData

' ---- Presenter & ViewModel ----
FavouriteCurrencyPresenter ..|> FavouriteCurrencyOutputBoundary
FavouriteCurrencyPresenter --> FavouriteCurrencyViewModel
FavouriteCurrencyOutputBoundary --> FavouriteCurrencyOutputData

' ---- DAO ----
FavouriteCurrencyFileDataAccessObject ..|> FavouriteCurrencyDataAccessInterface
@enduml
